--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="option">
                 <div class="op-content">
                     <div class="op-img">
-                    <img src="images/produts/op1.jpg" class="options-img">
+                    <img src="images/produts/p1/principal.jpg" class="options-img">
                     </div>
 
                     <div class="op-info">
@@ -50,7 +50,7 @@
                         <p class="name">Jogo de montar peças</p>
                         <p class="price">R$49,99</p>
                         </div>
-                        <button type="button" class="buy-buttom"><a href="carrinho.html"><img src="images/carrinho.svg" class="options-button"></a></button>
+                        <button type="button" class="buttom"><a href="carrinho.html"><img src="images/carrinho.svg" class="options-button"></a></button>
                     </div>
                 </div>
             </div>
@@ -58,7 +58,7 @@
             <div class="option">
                 <div class="op-content">
                     <div class="op-img">
-                    <img src="images/produts/op1.jpg" class="options-img">
+                        <img src="images/produts/p1/principal.jpg" class="options-img">
                     </div>
 
                     <div class="op-info">
@@ -66,7 +66,7 @@
                         <p class="name">Jogo de montar peças</p>
                         <p class="price">R$49,99</p>
                         </div>
-                        <button type="button" class="buy-buttom"><a href="carrinho.html"><img src="images/carrinho.svg" class="options-button"></a></button>
+                        <button type="button" class="buttom"><a href="carrinho.html"><img src="images/carrinho.svg" class="options-button"></a></button>
                     </div>
                 </div>
             </div>
@@ -74,7 +74,7 @@
             <div class="option">
                 <div class="op-content">
                     <div class="op-img">
-                    <img src="images/produts/op1.jpg" class="options-img">
+                        <img src="images/produts/p1/principal.jpg" class="options-img">
                     </div>
 
                     <div class="op-info">
@@ -82,7 +82,7 @@
                         <p class="name">Jogo de montar peças</p>
                         <p class="price">R$49,99</p>
                         </div>
-                        <button type="button" class="buy-buttom"><a href="carrinho.html"><img src="images/carrinho.svg" class="options-button"></a></button>
+                        <button type="button" class="buttom"><a href="carrinho.html"><img src="images/carrinho.svg" class="options-button"></a></button>
                     </div>
                 </div>
             </div>
@@ -90,7 +90,7 @@
             <div class="option">
                 <div class="op-content">
                     <div class="op-img">
-                    <img src="images/produts/op1.jpg" class="options-img">
+                        <img src="images/produts/p1/principal.jpg" class="options-img">
                     </div>
 
                     <div class="op-info">
@@ -98,7 +98,7 @@
                         <p class="name">Jogo de montar peças</p>
                         <p class="price">R$49,99</p>
                         </div>
-                        <button type="button" class="buy-buttom"><a href="carrinho.html"><img src="images/carrinho.svg" class="options-button"></a></button>
+                        <button type="button" class="buttom"><a href="carrinho.html"><img src="images/carrinho.svg" class="options-button"></a></button>
                     </div>
                 </div>
             </div>
