--- a/productPage.html
+++ b/productPage.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-    <title>Kidzy | Página de produto</title>
+    <title>Kidzy | Página de</title>
 </head>
 <body>
     <!-- Menu -->
