--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <p>Você não pode perder!</p>
         </div>
         
-        <div class="options-container">
+        <div id="options-home">
             <!-- <div class="option">
                 <div class="op-content">
                     <div class="op-img">
