--- a/aboutUs.html
+++ b/aboutUs.html
@@ -58,23 +58,33 @@
                     <p>Divirta-se explorando, aprendendo e brincando!</p>
                     <p>Atenciosamente, a equipe da Kidzy!</p>
                 </div>
-        </section>
+            
+        
 
-        <section class="contact_us">
-            <div>
+            <div class="contact-us">
                 <h2>Fale Conosco!</h2>
-                <p>Estamos 24hr por dia conectados e prontos para te ouvir</p>
+                <p>Estamos disponíveis 24 horas por dia para ouvir você.</p>
+                <form action="" id="formulario">
+                    <div>
+                    <div class="contact-container">
+                        <label for="contact_name" class="contact-text">Nome:</label>
+                        <input type="text" id="contact_name" name="contact_name">
+                    </div>
+
+                    <div class="contact-container">
+                        <label for="contact_email" class="contact-text">E-mail:</label>
+                        <input type="email" id="contact_email" name="contact_email">
+                    </div>
+
+                    <div class="contact-container">
+                        <label for="message" class="contact-text">Mensagem:</label>
+                        <textarea id="message" name="message" placeholder="Digite sua mensagem"></textarea>
+                    </div>
+                    </div>
+
+                    <button class="buttom">Enviar</button>
+                </form>
             </div>
-
-            <form action="" id="contact_us">
-                <label for="contact_name">Seu nome:</label>
-                <input type="text" id="contact_name" name="contact_name">
-                <label for="contact_email">Seu E-mail:</label>
-                <input type="email" name="contact_email" id="contact_email">
-                <textarea name="message" id="message" cols="30" rows="10">Digite sua mensagem:</textarea>
-                <button>Enviar</button>
-            </form>
-
         </section>
     </main>
 
