--- a/aboutUs.html
+++ b/aboutUs.html
@@ -68,12 +68,12 @@
                     <div>
                     <div class="contact-container">
                         <label for="contact_name" class="contact-text">Nome:</label>
-                        <input type="text" id="contact_name" name="contact_name">
+                        <input type="text" id="contact_name" name="contact_name" placeholder="Digite seu nome completo" required>
                     </div>
 
                     <div class="contact-container">
                         <label for="contact_email" class="contact-text">E-mail:</label>
-                        <input type="email" id="contact_email" name="contact_email">
+                        <input type="email" id="contact_email" name="contact_email" placeholder="E-mail no padrão: nome@email.com" pattern="[a-zA-Z0-9._%+-]+@gmail\.com" required>
                     </div>
 
                     <div class="contact-container">
