--- a/carrinho.html
+++ b/carrinho.html
@@ -40,29 +40,115 @@
 
         <div class="carrinho-container">
             <div class="carrinho-option">
-                <div class="carrinho-option-img">
-                    <img src="images/produts/p1/principal.jpg" alt="" srcset="">
+                <div class="infos-carrinho">
+                    <div class="carrinho-option-img">
+                        <img src="images/produts/p1/principal.jpg" alt="" srcset="">
+                    </div>
+
+                    <div class="carrinho-option-text">
+                        <h5>Caixa de encaixar formas</h5>
+                        <p>Tam: único</p>
+                        <p>Cor: padrão</p>
+                    </div>
                 </div>
 
-                <div class="carrinho-option-text">
-                    <p>Caixa de encaixar formas</p>
-                    <p>Tam: único</p>
-                    <p>Cor: padrão</p>
+                <div class="more-infos-carrinho">
+                    <div class="qtd-carrinho">
+                        <div class="qtd-text">
+                        <img src="images/Menos.svg" alt="" srcset="">
+                        <p>01</p>
+                        <img src="images/Mais.svg" alt="" srcset="">
+                        </div>
+                    </div>
+
+                    <div class="valor-carrinho">
+                    <p>R$49,99</p>
+                    </div>
+
+                    <div class="excluir-carrinho">
+                    <img src="images/Excluir.svg" alt="" srcset="">
+                    </div>
                 </div>
 
-                <div class="qtd-carrinho">
-                    <img src="images/Menos.svg" alt="" srcset="">
-                    <p>01</p>
-                    <img src="images/Mais.svg" alt="" srcset="">
+                
+            </div>
+        </div>
+
+        <div class="carrinho-container">
+            <div class="carrinho-option">
+                <div class="infos-carrinho">
+                    <div class="carrinho-option-img">
+                        <img src="images/produts/p1/principal.jpg" alt="" srcset="">
+                    </div>
+
+                    <div class="carrinho-option-text">
+                        <h5>Caixa de encaixar formas</h5>
+                        <p>Tam: único</p>
+                        <p>Cor: padrão</p>
+                    </div>
                 </div>
 
-                <div class="valor-carrinho">
-                 <p>R$49,99</p>
+                <div class="more-infos-carrinho">
+                    <div class="qtd-carrinho">
+                        <div class="qtd-text">
+                        <img src="images/Menos.svg" alt="" srcset="">
+                        <p>01</p>
+                        <img src="images/Mais.svg" alt="" srcset="">
+                        </div>
+                    </div>
+
+                    <div class="valor-carrinho">
+                    <p>R$49,99</p>
+                    </div>
+
+                    <div class="excluir-carrinho">
+                    <img src="images/Excluir.svg" alt="" srcset="">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="carrinho-container">
+            <div class="carrinho-option">
+                <div class="infos-carrinho">
+                    <div class="carrinho-option-img">
+                        <img src="images/produts/p1/principal.jpg" alt="" srcset="">
+                    </div>
+
+                    <div class="carrinho-option-text">
+                        <h5>Caixa de encaixar formas</h5>
+                        <p>Tam: único</p>
+                        <p>Cor: padrão</p>
+                    </div>
                 </div>
 
-                <div class="excluir-carrinho">
-                  <img src="images/Excluir.svg" alt="" srcset="">
+                <div class="more-infos-carrinho">
+                    <div class="qtd-carrinho">
+                        <div class="qtd-text">
+                        <img src="images/Menos.svg" alt="" srcset="">
+                        <p>01</p>
+                        <img src="images/Mais.svg" alt="" srcset="">
+                        </div>
+                    </div>
+
+                    <div class="valor-carrinho">
+                    <p>R$49,99</p>
+                    </div>
+
+                    <div class="excluir-carrinho">
+                    <img src="images/Excluir.svg" alt="" srcset="">
+                    </div>
                 </div>
+            </div>
+        </div>
+
+        <div class="carrinho-container">
+            <div class="finalizar-compra">
+            <div class="total-valor">
+            <p>Total:</p>
+            <p>R$149,99</p>
+            </div>
+            <button class="buttom">Finalizar compra</button>
             </div>
         </div>
     </section>
