--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="style/style.css">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <title>Kidzy | Página Inicial</title>
+    <script type="module" src="./scripts/home.js" defer></script>
+
 </head>
 
 <body>
