--- a/login.html
+++ b/login.html
@@ -26,9 +26,9 @@
     </header>
 
 
-    <main id="login-container">
-                <div class="login-input">
-                    <div class="login-content">
+    <div id="login-container">
+        <div class="login-input">
+            <div class="login-content">
 
                     <div class="login-content-title">
                     <img src="images/logo.svg" alt="" srcset="">
@@ -50,6 +50,6 @@
                     </form>
                     </div>
                 </div>
-    </main>
+        </div>
 </body>
 </html>
