--- a/productPage.html
+++ b/productPage.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style/style.css">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <title>Kidzy | Página de</title>
+    <script type="module" src="./scripts/main.js" defer></script>
 </head>
 <body>
     <header>
@@ -60,7 +61,16 @@
                             </div>
                         </div>
 
-                        <div class="options-product">
+                        <div class="quantidade">
+                            <p class="section-text">Quantidade</p>
+
+                            <div class="quantidade-section">
+                            <button class="qntd-button"><img src="images/Mais.svg" alt=""></button>
+                            <p>01</p>
+                            <button class="qntd-button"><img src="images/Menos.svg" alt="" srcset=""></button>
+                            </div>
+                        </div>
+                        <!-- <div class="options-product">
                             <div class="tam">
                                 <p class="section-text">Tamanho</p>
                                 <input type="radio" id="tamanho" name="tamanho" value="tamanho">
@@ -72,7 +82,7 @@
                                 <label for="color">Padrão</label>
                             </div>
 
-                        </div>
+                        </div> -->
                     </div>
 
                     <div class="continuar-compra">
