--- a/carrinho.html
+++ b/carrinho.html
@@ -37,111 +37,33 @@
             <p class="subtitulos">Continue comprando</p>
         </div>
 
-
-        <div class="carrinho-container">
-            <div class="carrinho-option">
-                <div class="infos-carrinho">
+            <div class="carrinho-option-container">
+                <div class="carrinho-option">
                     <div class="carrinho-option-img">
-                        <img src="images/produts/p1/principal.jpg" alt="" srcset="">
+                            <img src="images/produts/p1/principal.jpg" alt="" srcset="">
                     </div>
-
                     <div class="carrinho-option-text">
-                        <h5>Caixa de encaixar formas</h5>
-                        <p>Tam: único</p>
-                        <p>Cor: padrão</p>
+                            <h5>Caixa de encaixar formas</h5>
+                            <p>Tam: único</p>
+                            <p>Cor: padrão</p>
                     </div>
-                </div>
-
-                <div class="more-infos-carrinho">
                     <div class="qtd-carrinho">
-                        <div class="qtd-text">
-                        <img src="images/Menos.svg" alt="" srcset="">
-                        <p>01</p>
-                        <img src="images/Mais.svg" alt="" srcset="">
-                        </div>
+                        <button class="qntd-button"><img src="images/Mais.svg" alt=""></button>
+                            <p>01</p>
+                        <button class="qntd-button"><img src="images/Menos.svg" alt="" srcset=""></button>
                     </div>
+                    
 
                     <div class="valor-carrinho">
-                    <p>R$49,99</p>
+                        <p>R$49,99</p>
                     </div>
 
                     <div class="excluir-carrinho">
-                    <img src="images/Excluir.svg" alt="" srcset="">
-                    </div>
-                </div>
-
-                
-            </div>
-        </div>
-
-        <div class="carrinho-container">
-            <div class="carrinho-option">
-                <div class="infos-carrinho">
-                    <div class="carrinho-option-img">
-                        <img src="images/produts/p1/principal.jpg" alt="" srcset="">
-                    </div>
-
-                    <div class="carrinho-option-text">
-                        <h5>Caixa de encaixar formas</h5>
-                        <p>Tam: único</p>
-                        <p>Cor: padrão</p>
-                    </div>
-                </div>
-
-                <div class="more-infos-carrinho">
-                    <div class="qtd-carrinho">
-                        <div class="qtd-text">
-                        <img src="images/Menos.svg" alt="" srcset="">
-                        <p>01</p>
-                        <img src="images/Mais.svg" alt="" srcset="">
-                        </div>
-                    </div>
-
-                    <div class="valor-carrinho">
-                    <p>R$49,99</p>
-                    </div>
-
-                    <div class="excluir-carrinho">
-                    <img src="images/Excluir.svg" alt="" srcset="">
+                        <img src="images/Excluir.svg" alt="" srcset="">
                     </div>
                 </div>
             </div>
-        </div>
-
-        <div class="carrinho-container">
-            <div class="carrinho-option">
-                <div class="infos-carrinho">
-                    <div class="carrinho-option-img">
-                        <img src="images/produts/p1/principal.jpg" alt="" srcset="">
-                    </div>
-
-                    <div class="carrinho-option-text">
-                        <h5>Caixa de encaixar formas</h5>
-                        <p>Tam: único</p>
-                        <p>Cor: padrão</p>
-                    </div>
-                </div>
-
-                <div class="more-infos-carrinho">
-                    <div class="qtd-carrinho">
-                        <div class="qtd-text">
-                        <img src="images/Menos.svg" alt="" srcset="">
-                        <p>01</p>
-                        <img src="images/Mais.svg" alt="" srcset="">
-                        </div>
-                    </div>
-
-                    <div class="valor-carrinho">
-                    <p>R$49,99</p>
-                    </div>
-
-                    <div class="excluir-carrinho">
-                    <img src="images/Excluir.svg" alt="" srcset="">
-                    </div>
-                </div>
-            </div>
-        </div>
-
+ 
         <div class="carrinho-container">
             <div class="finalizar-compra">
             <div class="total-valor">
