--- a/productPage.html
+++ b/productPage.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-    <title>Kidzy | Página de</title>
-    <script type="module" src="./scripts/main.js" defer></script>
+    <title>Kidzy | Produto</title>
+    <script type="module" src="./scripts/produto.js" defer></script>
 </head>
 <body>
     <header>
@@ -31,8 +31,8 @@
             <p>Saiba mais sobre nossos produtos!</p>
         </div>
 
-        <div class="product-container">
-            <div class="product-image-container">
+        <div class="product-container" id="product-container">
+            <!-- <div class="product-image-container">
                 <div class="imagens-product">
                     <div class="tam-img"><img src="images/produts/p3/principal.jpg" alt=""></div>
                     <div class="tam-img"><img src="images/produts/p3/extra.jpg" alt=""></div>
@@ -70,19 +70,6 @@
                             <button class="qntd-button"><img src="images/Menos.svg" alt="" srcset=""></button>
                             </div>
                         </div>
-                        <!-- <div class="options-product">
-                            <div class="tam">
-                                <p class="section-text">Tamanho</p>
-                                <input type="radio" id="tamanho" name="tamanho" value="tamanho">
-                                <label for="tamanho">Único</label>
-                            </div>
-                            <div class="color">
-                                <p class="section-text">Cor</p>
-                                <input type="radio" id="color" name="color" value="color">
-                                <label for="color">Padrão</label>
-                            </div>
-
-                        </div> -->
                     </div>
 
                     <div class="continuar-compra">
@@ -96,7 +83,7 @@
                         </div>
                     </div>
             </div>
-        </div>
+        </div> -->
 
         </div>
     <section>
