--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style/style.css">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <title>Kidzy | Catálogo</title>
-    <script type="module" src="./scripts/catalog.js" defer></script>
+    <script type="module" src="./scripts/catalogo.js" defer></script>
 </head>
 <body>
     <header>
