--- a/carrinho.html
+++ b/carrinho.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
+    
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <script type="module" src="./scripts/carrinho.js" defer></script>
     <title>Kidzy | Carrinho</title>
@@ -40,8 +41,8 @@
 
         <div class="carrinho-option-container">
             <div class="carrinho-infos">
-            <!-- <ul class="lista-carrinho">
-            <li class="carrinho-option">
+            <ul class="lista-carrinho">
+            <!-- <li class="carrinho-option">
                 <div class="product-infos">
                     <div class="carrinho-option-img">
                             <img src="images/produts/p1/principal.jpg" alt="" srcset="">
@@ -63,8 +64,11 @@
                 <div class="excluir-carrinho">
                     <img src="images/Excluir.svg" alt="" srcset="">
                 </div>
-            </li>
-            </ul> -->
+            </li> -->
+            </ul> 
+
+            <hr size="1" width="100%" color="#cecece" align="center" noshade>
+
             <div class="carrinho-container">
                 <div class="finalizar-compra">
                 <div class="total-valor">
