--- a/carrinho.html
+++ b/carrinho.html
@@ -75,7 +75,7 @@
                 <h2>Total:</h2>
                 <p>R$149,99</p>
                 </div>
-                <button class="buttom" id="finalizar-compra-buttom">Finalizar compra</button>
+                <a href="endereco.html"><button class="buttom" id="finalizar-compra-buttom">Finalizar compra</button></a>
                 </div>
             </div>
         </div>
