--- a/login.html
+++ b/login.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <script type="module" src="./scripts/login.js" defer></script>
     <title>Kidzy | Login Administrador</title>
 </head>
 
@@ -44,10 +45,10 @@
                         <label for="password">Senha:</label>
                         <input type="password" id="password" name="password" placeholder="Digite sua senha" required>
                         </div>
-                        <div class="botao-login">
-                        <button class="buttom" type="submit">Entrar</button>
-                        </div>
                     </form>
+                        <div class="botao-login">
+                        <button class="buttom" id="login-button" type="submit">Entrar</button>
+                        </div>
                     </div>
                 </div>
         </div>
