--- a/carrinho.html
+++ b/carrinho.html
@@ -70,15 +70,11 @@
             <hr size="1" width="100%" color="#cecece" align="center" noshade>
 
             <div class="carrinho-container">
-                <div class="finalizar-compra">
-                <a href="catalog.html"><button class="verMaisbutton">Ver mais produtos</button></a>
-                <a href="endereco.html"><button class="buttom" id="finalizar-compra-buttom">Continuar compra</button></a>
-                </div>
-
+            
                 <div class="form-container">
-                    <h1>Digite o endereço para entrega:</h1>
+                    <h1>Formulário de entrega</h1>
                     <form action="" id="endereco-form">
-                        <label for="name">Nome Completo:</label>
+                        <label for="name">Nome completo:</label>
                         <input type="text" id="nome" name="name">
                         <label for="logradouro">Logradouro:</label>
                         <input type="text" id="logradouro" name="logradouro">
@@ -95,9 +91,14 @@
                         <label for="e-mail">E-mail:</label>
                         <input type="email" id="email" name="email">
                     </form>
-                    <button class="buttom">Finalizar compra</button>
                     </div>
-                
+
+                <hr size="1" width="100%" color="#cecece" align="center" noshade>
+
+                <div class="finalizar-compra">
+                <a href="catalog.html"><button class="verMaisbutton">Ver mais produtos</button></a>
+                <a href=""><button class="buttom" id="finalizar-compra-buttom">Finalizar compra</button></a>
+                </div>
             </div>
         </div>
         </div>
