--- a/adm.html
+++ b/adm.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kidzy | Página Admnistrador</title>
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="style/style.css">
-    <script type="module" src="./scripts/adm.js" defer></script>
-  </head>
+  <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Kidzy | Página Admnistrador</title>
+      <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+      <link rel="stylesheet" href="style/style.css">
+      <script type="module" src="./scripts/adm.js" defer></script>
+    </head>
 <body>
-<!--Inicio do Cabeçalho -->
-<header>
-    <!-- Inicio do Menu de Navegação -->
+  <header>
+    <!-- M E N U -->
     <nav id="menu-container">
-      <a href="#" ><img src="images/Kidzy.svg" id="menu-logotipo" alt="Logo"></a>
+      <a href="index.html" ><img src="images/Kidzy.svg" id="menu-logotipo" alt="Logo"></a>
       <div class="menu-options">
           <a href="index.html">Home</a>
           <a href="catalog.html">Catálogo</a>
@@ -24,14 +23,10 @@
           <a href="login.html"><button class="buttom">Login</button></a>
       </div>
     </nav>
+  </header>
 
-       <!-- Fim do Menu de Navegação -->
-</header>
-<!--Fim do Cabeçalho -->
-<main>
-  <div class="pedidos-container">
-  <div id="resultado" class="pedidos-content-container"></div>
-</div>
-</main>
+  <main>
+    <div id="resultado" class="pedidos-content-container"></div>
+  </main>
 </body>
 </html>
