--- a/carrinho.html
+++ b/carrinho.html
@@ -13,7 +13,7 @@
     <header>
         <!-- M E N U -->
         <nav id="menu-container">
-            <a href="#" ><img src="images/Kidzy.svg" id="menu-logotipo" alt="Logo"></a>
+            <a href="index.html" ><img src="images/Kidzy.svg" id="menu-logotipo" alt="Logo"></a>
             <div class="menu-options">
                 <a href="index.html">Home</a>
                 <a href="catalog.html">Catálogo</a>
@@ -39,38 +39,16 @@
             <p class="subtitulos">Continue comprando</p>
         </div>
 
+        <!-- C A R R I N H O -->
         <div class="carrinho-option-container">
             <div class="carrinho-infos">
             <ul class="lista-carrinho">
-            <!-- <li class="carrinho-option">
-                <div class="product-infos">
-                    <div class="carrinho-option-img">
-                            <img src="images/produts/p1/principal.jpg" alt="" srcset="">
-                    </div>
-                    <div class="carrinho-option-text">
-                        <h5>Caixa de encaixar formas</h5>
-                    </div>
-                </div>
-                <div class="qtd-carrinho">
-                    <button class="qntd-button"><img src="images/Mais.svg" alt=""></button>
-                        <p>01</p>
-                    <button class="qntd-button"><img src="images/Menos.svg" alt="" srcset=""></button>
-                </div>
-
-                <div class="valor-carrinho">
-                    <p>R$49,99</p>
-                </div>
-
-                <div class="excluir-carrinho">
-                    <img src="images/Excluir.svg" alt="" srcset="">
-                </div>
-            </li> -->
             </ul> 
 
             <hr size="1" width="100%" color="#cecece" align="center" noshade>
 
+            <!-- E N D E R E Ç O -->
             <div class="carrinho-container">
-            
                 <div class="form-container">
                     <h1>Formulário de entrega</h1>
                     <form action="" id="endereco-form">
@@ -91,7 +69,7 @@
                         <label for="e-mail">E-mail:</label>
                         <input type="email" id="email" name="email">
                     </form>
-                    </div>
+                </div>
 
                 <hr size="1" width="100%" color="#cecece" align="center" noshade>
 
@@ -111,10 +89,9 @@
     <footer>
         <section id="rodape-container">
             <a href="index.html"><p>Home</p></a>
-            <a href="aboutUs.html"><p>Sobre nós</p></a>
             <a href="catalog.html"><p>Catálogo</p></a>
+            <a href="aboutUs.html"><p>Sobre nós</p></a>
         </section>
     </footer>
-
 </body>
 </html>
