--- a/catalog.html
+++ b/catalog.html
@@ -12,7 +12,7 @@
     <header>
         <!-- M E N U -->
         <nav id="menu-container">
-            <a href="#" ><img src="images/Kidzy.svg" id="menu-logotipo" alt="Logo"></a>
+            <a href="index.html" ><img src="images/Kidzy.svg" id="menu-logotipo" alt="Logo"></a>
             <div class="menu-options">
                 <a href="index.html">Home</a>
                 <a href="catalog.html">Catálogo</a>
@@ -36,23 +36,9 @@
                 <h1>> Descubra nosso catálogo</h1>
                 <p>Você não pode perder!</p>
             </div>
-        
-            <div id="options-container">
-                <!-- <div class="option">
-                    <div class="op-content">
-                        <div class="op-img">
-                            <img src="images/produts/op1.jpg" class="options-img">
-                        </div>
 
-                        <div class="op-info">
-                            <div class="op-text">
-                                <p class="name">Caixa de encaixar formas</p>
-                                <p class="price">R$49,99</p>
-                            </div>
-                                <button type="button" class="buy-buttom"><a href="productPage.html"><img src="images/carrinho.svg" class="options-button"></a></button>
-                        </div>
-                    </div>
-                </div> -->
+            <!-- O P Ç Õ E S -->
+            <div id="options-container">
             </div>
         </section>
     </main>
@@ -61,10 +47,9 @@
     <footer>
         <section id="rodape-container">
             <a href="index.html"><p>Home</p></a>
-            <a href="aboutUs.html"><p>Sobre nós</p></a>
             <a href="catalog.html"><p>Catálogo</p></a>
+            <a href="aboutUs.html"><p>Sobre nós</p></a>
         </section>
     </footer>
-
 </body>
 </html>
