--- a/index.html
+++ b/index.html
@@ -11,12 +11,10 @@
 </head>
 
 <body>
-
-
     <header>
-        <!-- M E N U -->
+    <!-- M E N U -->
         <nav id="menu-container">
-            <a href="#" ><img src="images/Kidzy.svg" id="menu-logotipo" alt="Logo"></a>
+            <a href="index.html" ><img src="images/Kidzy.svg" id="menu-logotipo" alt="Logo"></a>
             <div class="menu-options">
                 <a href="index.html">Home</a>
                 <a href="catalog.html">Catálogo</a>
@@ -35,32 +33,17 @@
     </header>
 
     <main>
+    <!-- D E S T A Q U E S -->
     <section class="section-container">
         <div class="title-section">
             <h1>> Queridinhos do momento</h1>
             <p>Você não pode perder!</p>
         </div>
-        
         <div id="options-home">
-            <!-- <div class="option">
-                <div class="op-content">
-                    <div class="op-img">
-                        <img src="images/produts/p1/principal.jpg" class="options-img">
-                    </div>
-
-                    <div class="op-info">
-                        <div class="op-text">
-                        <p class="name">Jogo de montar peças</p>
-                        <p class="price">R$49,99</p>
-                        </div>
-                        <button type="button" class="buttom"><a href="carrinho.html"><img src="images/carrinho.svg" class="options-button"></a></button>
-                    </div>
-                </div>
-            </div> -->
         </div>
     </section>
    
-    <!-- Avaliações -->
+    <!-- A V A L I A Ç Õ E S  -->
     <section class="section-container">
         <div class="title-section">
             <h1>> Nossos clientes aprovaram!</h1>
@@ -87,7 +70,7 @@
         </div>
     </section>
 
-    <!-- TEXTO -->
+    <!-- T E X T O -->
     <section class="section-container">
         <div class="title-section">
             <h1>> A importância da diversão</h1>
@@ -107,17 +90,15 @@
             </div>
         </div>
     </section>
-
     </main>
 
     <!-- R O D A P É -->
     <footer>
         <section id="rodape-container">
             <a href="index.html"><p>Home</p></a>
-            <a href="aboutUs.html"><p>Sobre nós</p></a>
             <a href="catalog.html"><p>Catálogo</p></a>
+            <a href="aboutUs.html"><p>Sobre nós</p></a>
         </section>
     </footer>
-
 </body>
 </html>
