--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
     <header>
         <!-- M E N U -->
         <nav id="menu-container">
-            <a href="#" ><img src="images/Kidzy.svg" id="menu-logotipo" alt="Logo"></a>
+            <a href="index.html" ><img src="images/Kidzy.svg" id="menu-logotipo" alt="Logo"></a>
             <div class="menu-options">
                 <a href="index.html">Home</a>
                 <a href="catalog.html">Catálogo</a>
@@ -26,31 +26,32 @@
         </nav>
     </header>
 
-
+    <!-- L O G I N -->
+    <main>
     <div id="login-container">
         <div class="login-input">
             <div class="login-content">
-
-                    <div class="login-content-title">
-                    <img src="images/logo.svg" alt="" srcset="">
-                    <h1>Olá,</h1>
-                    <h1>Faça o login para entrar</h1>
+                <div class="login-content-title">
+                <img src="images/logo.svg" alt="" srcset="">
+                <h1>Olá,</h1>
+                <h1>Faça o login para entrar</h1>
+                </div>
+                <form>
+                    <div class="input-group">
+                    <label for="username">Usuário:</label>
+                    <input type="text" id="username" name="username" placeholder="Digite seu usuário" required>
                     </div>
-                    <form>
-                        <div class="input-group">
-                        <label for="username">Usuário:</label>
-                        <input type="text" id="username" name="username" placeholder="Digite seu usuário" required>
-                        </div>
-                        <div class="input-group">
-                        <label for="password">Senha:</label>
-                        <input type="password" id="password" name="password" placeholder="Digite sua senha" required>
-                        </div>
-                    </form>
-                        <div class="botao-login">
-                        <button class="buttom" id="login-button" type="submit">Entrar</button>
-                        </div>
+                    <div class="input-group">
+                    <label for="password">Senha:</label>
+                    <input type="password" id="password" name="password" placeholder="Digite sua senha" required>
+                    </div>
+                </form>
+                    <div class="botao-login">
+                    <button class="buttom" id="login-button" type="submit">Entrar</button>
                     </div>
                 </div>
-        </div>
+            </div>
+    </div>
+    </main>
 </body>
 </html>
