--- a/productPage.html
+++ b/productPage.html
@@ -10,8 +10,9 @@
 </head>
 <body>
     <header>
+        <!-- M E N U -->
         <nav id="menu-container">
-            <a href="#" ><img src="images/Kidzy.svg" id="menu-logotipo" alt="Logo"></a>
+            <a href="index.html" ><img src="images/Kidzy.svg" id="menu-logotipo" alt="Logo"></a>
             <div class="menu-options">
                 <a href="index.html">Home</a>
                 <a href="catalog.html">Catálogo</a>
@@ -25,6 +26,7 @@
     </header>
 
     <main>
+    <!-- P R O D U T O -->
     <section class="section-container">
         <div class="title-section">
             <h1>> Produtos</h1>
@@ -32,59 +34,6 @@
         </div>
 
         <div class="product-container" id="product-container">
-            <!-- <div class="product-image-container">
-                <div class="imagens-product">
-                    <div class="tam-img"><img src="images/produts/p3/principal.jpg" alt=""></div>
-                    <div class="tam-img"><img src="images/produts/p3/extra.jpg" alt=""></div>
-                    <div class="tam-img"><img src="images/produts/p3/info.jpg" alt=""></div>
-                    <div class="tam-img"><img src="images/produts/p3/modelos.jpg" alt=""></div>
-                </div>
-        
-                <div class="principal-img">
-                        <img src="images/produts/p3/principal.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="product-text-container">
-                <div class="section-product">
-                    <div class="text-product">
-                        <div class="info-product">
-                            <h1>Caixa de encaixar formas</h1>
-                            <div class="text-p">
-                            <p class="section-text">Descrição</p>
-                            <p class="descrition-product">A Caixa de Encaixar Formas é um brinquedo sensorial projetado para crianças em fase pré-escolar que oferece uma experiência educativa para o desenvolvimento cognitivo dos pequenos.</p>
-                            </div>
-
-                            <div class="text-p">
-                            <p class="espec-product">Itens: 1 caixa sensorial, 6 formas diversas</p>
-                            <p class="espec-product">Idade: 1-3</p>
-                            </div>
-                        </div>
-
-                        <div class="quantidade">
-                            <p class="section-text">Quantidade</p>
-
-                            <div class="quantidade-section">
-                            <button class="qntd-button"><img src="images/Mais.svg" alt=""></button>
-                            <p>01</p>
-                            <button class="qntd-button"><img src="images/Menos.svg" alt="" srcset=""></button>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="continuar-compra">
-                        <div class="valor">
-                            <p class="section-text">Preço</p>
-                            <h2>R$49,99</h2>
-                        </div>
-                            
-                        <div class="adicionar">
-                            <button type="button" class="buttom">Adicionar ao carrinho</button>
-                        </div>
-                    </div>
-            </div>
-        </div> -->
-
         </div>
     <section>
     </main>
@@ -93,8 +42,8 @@
     <footer>
         <section id="rodape-container">
             <a href="index.html"><p>Home</p></a>
-            <a href="aboutUs.html"><p>Sobre nós</p></a>
             <a href="catalog.html"><p>Catálogo</p></a>
+            <a href="aboutUs.html"><p>Sobre nós</p></a>
         </section>
     </footer>
 </body>
